# UV-testing

./: main.py  pyproject.toml
.github/workflows/: fastapi-ci.yml  push-ci.yml  push-ok.yml
calc/: __init__.py  ops.py
test/: test_api.py  test_ops.py
weather-mcp/: pyproject.toml
